--- a/static/js/front/package.json
+++ b/static/js/front/package.json
@@ -30,6 +30,7 @@
         "typescript": "^5.5.4",
         "webpack": "^5.94.0",
         "webpack-cli": "^5.1.4",
+        "webpack-bundle-analyzer": "^4.10.1",
         "html-webpack-plugin": "^5.6.0"
     }
 }
