--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@ instance/
 static/js/bundle
 static/js/front/node_modules
 templates/pages/index.html
-static/js/front/node_modules
+front/node_modules
 static/js/front/package-lock.json
-static/js/bundle
-templates/pages/index.html
+static/bundle
